--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,7 @@ title: 企业简介
 keywords: 
 description: 
 ---
-<p class="title-4 text-blue text-center">佛山市顺德东叶机电有限公司（凯瑞达工控）</p>
+<p class="title-4 text-red text-center">佛山市顺德东叶机电有限公司（凯瑞达工控）</p>
 <div class="text-indent-2 margin-btm-30 margin-top-30">
   <p>顺德东叶机电有限公司(凯瑞达工控)，坐落于广东省佛山市顺德区容桂镇天富来国际工业城，现代化标准工业厂房，汇聚105国道、京广澳高速路、广珠澳城轨、港口四大海陆运输优势。</p>
   <p>公司成立于2000年，专业研发、生产和销售张力控制器、张力检测器、纠偏控制器、超声波纠偏、跟线纠偏等工控自动化产品，是工业运动控制、卷材控制的专家。公司自主研发的 KRD (凯瑞达)全自动张力控制系统和伺服纠偏控制系统性能强大、质量稳定、处于国内最尖端的水平，在包装、印刷、标签、造纸、塑料、线缆、无纺布、轮胎和橡胶等行业广泛应用。</p>
