--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,15 +3,15 @@ layout: pages
 permalink: /contact/
 category: contact
 title: 联系我们
-keywords: 张力控制器,纠偏控制器,超声波纠偏,张力检测器,跟线纠偏
-description: 张力控制器、纠偏控制器、超声波纠偏、张力检测器、跟线纠偏厂家凯瑞达KRD(0757-22681566)位于广东佛山顺德容桂天富来工业城三期13座4层。
+keywords: 
+description: 
 ---
-<p class="title-4 text-blue margin-btm-20">联系方式</p>
+<p class="title-4 text-red margin-btm-20">联系方式</p>
 <p><i class="fas fa-home"></i> 地址：{{ site.address }}</p>
-<p><i class="fas fa-phone"></i> 电话：<a href="tel:{{ site.tel1 }}">{{ site.tel1 }}</a> <a href="tel:{{ site.tel2 }}">{{ site.tel2 }}</a></p>
-<p><i class="fas fa-mobile-alt"></i> 业务洽谈：<a href="tel:{{ site.sale-tel }}">{{ site.sale-tel }}</a>（黎生）</p>
+<p><i class="fas fa-phone"></i> 电话：<a href="tel:{{ site.tel1 }}">{{ site.tel }}</a></p>
+<p><i class="fas fa-mobile-alt"></i> 业务洽谈：<a href="tel:{{ site.phone }}">{{ site.phone }}</a>（郭先生）</p>
 <p><i class="fab fa-qq"></i> QQ：<a href="http://wpa.qq.com/msgrd?v=3&uin={{ site.qq }}&site=qq&menu=yes">{{ site.qq }}</a></p>
 <p><i class="fas fa-fax"></i> 传真：{{ site.fax }}</p>
 <p><i class="fas fa-envelope"></i> 邮箱：{{ site.email }}</p>
 <p><i class="fab fa-weixin"></i> 微信：<span on="tap:weixin.toggle" id="btn-open" tabindex="0">{{ site.weixin }}(点击扫码)</span></p>
-<a href="" target="_blank"><mip-img src="/images/contact/map.jpg" class="img-thumbnail" alt="凯瑞达百度地图"></mip-img></a>
+<a href="" target="_blank"><mip-img src="/images/contact/map.jpg" class="img-thumbnail" alt="荣钜机械百度地图"></mip-img></a>
