--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ category: home
 full_title: 荣钜机械
 ---
 <mip-carousel autoplay defer="3500" layout="responsive" width="1920" height="700" indicator buttonController>
-  <a data-title="张力控制器" href="{{ site.url }}/tension-control/"><mip-img src="{{ site.url }}/images/home/billboard-tension-control.jpg" alt="张力控制器"></mip-img></a>
-  <a data-title="纠偏控制器" href="{{ site.url }}/controller/"><mip-img src="{{ site.url }}/images/home/billboard-controller.jpg" alt="纠偏控制器"></mip-img></a>
+  <a data-title="" href="{{ site.url }}/tension-control/"><mip-img src="{{ site.url }}/images/home/billboard.jpg" alt=""></mip-img></a>
+  <a data-title="" href="{{ site.url }}"><mip-img src="{{ site.url }}/images/home/billboard.jpg" alt=""></mip-img></a>
 </mip-carousel>
 <div class="margin-top-50"></div>
 <div class="container margin-btm-40">
@@ -13,7 +13,7 @@ full_title: 荣钜机械
 </div>
 <div class="bg-dark">
   <div class="container">
-    <p class="title-3 text-black text-center margin-top-40">东叶机电(凯瑞达工控)</p>
+    <p class="title-3 text-black text-center margin-top-40">荣钜机械</p>
     <div class="row margin-top-40">
       <div class="col-lg-6 col-md-6 margin-btm-20">
         <p><mip-img src="{{ site.url }}/images/home/about.jpg" class="img-thumbnail" alt="奇点科技"></mip-img></p>
@@ -27,7 +27,7 @@ full_title: 荣钜机械
   </div>
 </div>
 <div class="container">
-  <p class="title-3 text-black text-center margin-top-40">行业资讯</p>
+  <p class="title-3 text-black text-center margin-top-40">新闻中心</p>
   <div class="row margin-top-40">{% for post in site.categories["news"] limit:3 %}
     <div class="col-lg-4 col-md-6 margin-btm-20">
       <div class="news-sec">
