--- a/pages/about.html
+++ b/pages/about.html
@@ -6,11 +6,12 @@ title: 企业简介
 keywords: 
 description: 
 ---
-<p class="title-4 text-red text-center">佛山市顺德东叶机电有限公司（凯瑞达工控）</p>
+<p class="title-4 text-red text-center">佛山市南海荣钜机械有限公司</p>
 <div class="text-indent-2 margin-btm-30 margin-top-30">
-  <p>顺德东叶机电有限公司(凯瑞达工控)，坐落于广东省佛山市顺德区容桂镇天富来国际工业城，现代化标准工业厂房，汇聚105国道、京广澳高速路、广珠澳城轨、港口四大海陆运输优势。</p>
-  <p>公司成立于2000年，专业研发、生产和销售张力控制器、张力检测器、纠偏控制器、超声波纠偏、跟线纠偏等工控自动化产品，是工业运动控制、卷材控制的专家。公司自主研发的 KRD (凯瑞达)全自动张力控制系统和伺服纠偏控制系统性能强大、质量稳定、处于国内最尖端的水平，在包装、印刷、标签、造纸、塑料、线缆、无纺布、轮胎和橡胶等行业广泛应用。</p>
-  <p>东叶机电(凯瑞达工控)一直致力于提高国内轻工制造业的自动化控制水准，秉承与客户长期合作共同发展的宗旨，专注于提高产品的品质及市场认可度，为客户解决传动和卷材控制领域方面的问题;我们能根据客户的要求,量身定做各种 工业控制器;凭借可靠的产品质量和高性价比，东叶机电(凯瑞达工控)在国内张力控制和纠偏控制领域已取得良好的知名度和美誉度。</p>
+  <p>广东省佛山市南海荣钜机械有限公司（原佛山市南海区里水荣达机械厂），创建于2001年，位于有武术之乡美称的黄飞鸿故乡，是一家专业从事鞋带、绳带、织带服装辅料，电线及绝缘导管编织等机械辅助设备的设计、生产、销售以及服务于一体的科技型工厂；工厂以全自动样品整经机、全自动高速分纱机、全自动双锭纬纱机（打线机）、多功能全自动纬纱机（绕纱机）为主打产品；产品畅销全国各地，并外销西班牙，越南、泰国、孟加拉、印度等东南亚国家和南美洲地区，深受客户一致好评。</p>
+  <p>理念上：我们坚持以：“创新求精、专注完美、近乎苛求”的生产宗旨，以“质量第一，用心服务、诚信天下”的服务理念，凭着“先做人，后做事”的原则，提供高品质、信用佳的产品。</p>
+  <p>质量上：引进最先进的国际技术，核心部件全部采用台湾进口，凭借雄厚的技术力量，完美的检测手段，现代化的科学管理，打造最优质的专业产品。</p>
+  <p>服务上：采用最先进的国际售后服务管理模式，用24小时服务到位的服务承诺制，为用户提供二年保修，终身保养服务，以求互利共赢，并期盼与客户一起成长！</p>
 </div>
 <div class="row">
   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
