--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ full_title: 荣钜机械
       <div class="news-sec">
         <a data-title="{{ post.title }}" href="{{ site.url }}{{ post.url }}"><mip-img src="{{ site.url }}/images/news/{{ post.image }}.jpg" alt="{{ post.title }}"></mip-img></a>
         <div class="news-desc">
-          <h3 class="blog-post-title margin-top-20 text-center"><a data-title="{{ post.title }}" href="{{ site.url }}{{ post.url }}" class="hover-color">{{ post.title }}</a></h3>
+          <p class="blog-post-title margin-top-20 text-center"><a data-title="{{ post.title }}" href="{{ site.url }}{{ post.url }}" class="hover-color">{{ post.title }}</a></p>
           <span class="news-post-cat text-center">{{ post.date | date:"%Y年%m月%d日" }}</span>
           <p>{{ post.description }}</p>
         </div>
