--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,4 +14,4 @@ description:
 <p><i class="fas fa-fax"></i> 传真：{{ site.fax }}</p>
 <p><i class="fas fa-envelope"></i> 邮箱：{{ site.email }}</p>
 <p><i class="fab fa-weixin"></i> 微信：<span on="tap:weixin.toggle" id="btn-open" tabindex="0">{{ site.weixin }}(点击扫码)</span></p>
-<a href="" target="_blank"><mip-img src="/images/contact/map.jpg" class="img-thumbnail" alt="荣钜机械百度地图"></mip-img></a>
+<a href="https://j.map.baidu.com/40/3Zi" target="_blank"><mip-img src="/images/contact/map.jpg" class="img-thumbnail" alt="荣钜机械百度地图"></mip-img></a>
