--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@ keywords:
 description: 
 ---
 <p class="title-4 text-red margin-btm-20">联系方式</p>
-<p><i class="fas fa-home"></i> 地址：{{ site.address }}</p>
+<p><i class="fas fa-map-marker-alt"></i> 地址：{{ site.address }}</p>
 <p><i class="fas fa-phone"></i> 电话：<a href="tel:{{ site.tel1 }}">{{ site.tel }}</a></p>
 <p><i class="fas fa-mobile-alt"></i> 业务洽谈：<a href="tel:{{ site.phone }}">{{ site.phone }}</a>（郭先生）</p>
 <p><i class="fab fa-qq"></i> QQ：<a href="http://wpa.qq.com/msgrd?v=3&uin={{ site.qq }}&site=qq&menu=yes">{{ site.qq }}</a></p>
