--- a/pages/about.html
+++ b/pages/about.html
@@ -7,39 +7,39 @@ keywords:
 description: 
 ---
 <p class="title-4 text-red text-center">佛山市南海荣钜机械有限公司</p>
+<mip-img src="{{ site.url }}/images/about/about-1.jpg" alt="{{ page.title }}"></mip-img>
 <div class="text-indent-2 margin-btm-30 margin-top-30">
-  <mip-img src="{{ site.url }}/images/about/about-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
   <p>广东省佛山市南海荣钜机械有限公司（原佛山市南海区里水荣达机械厂），创建于2001年，位于有武术之乡美称的黄飞鸿故乡，是一家专业从事鞋带、绳带、织带服装辅料，电线及绝缘导管编织等机械辅助设备的设计、生产、销售以及服务于一体的科技型工厂；工厂以全自动样品整经机、全自动高速分纱机、全自动双锭纬纱机（打线机）、多功能全自动纬纱机（绕纱机）为主打产品；产品畅销全国各地，并外销西班牙，越南、泰国、孟加拉、印度等东南亚国家和南美洲地区，深受客户一致好评。</p>
   <p>理念上：我们坚持以：“创新求精、专注完美、近乎苛求”的生产宗旨，以“质量第一，用心服务、诚信天下”的服务理念，凭着“先做人，后做事”的原则，提供高品质、信用佳的产品。</p>
   <p>质量上：引进最先进的国际技术，核心部件全部采用台湾进口，凭借雄厚的技术力量，完美的检测手段，现代化的科学管理，打造最优质的专业产品。</p>
   <p>服务上：采用最先进的国际售后服务管理模式，用24小时服务到位的服务承诺制，为用户提供二年保修，终身保养服务，以求互利共赢，并期盼与客户一起成长！</p>
 </div>
 <div class="row">
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
     <mip-img src="{{ site.url }}/images/about/about-2.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
   </div>
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
     <mip-img src="{{ site.url }}/images/about/about-3.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
   </div>
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
     <mip-img src="{{ site.url }}/images/about/about-4.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
   </div>
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
     <mip-img src="{{ site.url }}/images/about/about-5.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
   </div>
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
     <mip-img src="{{ site.url }}/images/about/about-6.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
   </div>
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
     <mip-img src="{{ site.url }}/images/about/about-7.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
   </div>
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
     <mip-img src="{{ site.url }}/images/about/about-8.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
   </div>
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
     <mip-img src="{{ site.url }}/images/about/about-9.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
   </div>
-  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
     <mip-img src="{{ site.url }}/images/about/about-10.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
   </div>
 </div>
