--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@ full_title: 荣钜机械
   <a data-title="" href="{{ site.url }}/tension-control/"><mip-img src="{{ site.url }}/images/home/billboard.jpg" alt=""></mip-img></a>
   <a data-title="" href="{{ site.url }}"><mip-img src="{{ site.url }}/images/home/billboard.jpg" alt=""></mip-img></a>
 </mip-carousel>
-<div class="container margin-btm-40">
-  {% include products-list.html %}
+<div class="home-products">
+  <div class="container margin-btm-40">
+    {% include products-list.html %}
+  </div>
 </div>
-<div class="bg-dark">
+<div class="home-about">
   <div class="container">
     <p class="title-3 text-black text-center margin-top-40">荣钜机械</p>
-    <div class="row margin-top-40">
+    <div class="row margin-top-40 margin-btm-20">
       <div class="col-lg-6 col-md-6 margin-btm-20">
         <p><mip-img src="{{ site.url }}/images/home/about.jpg" class="img-thumbnail" alt="奇点科技"></mip-img></p>
       </div>
@@ -23,10 +25,10 @@ full_title: 荣钜机械
     </div>
   </div>
 </div>
-<div class="container">
+<div class="container hidden-xs hidden-sm">
   <p class="title-3 text-black text-center margin-top-40">新闻中心</p>
   <div class="row margin-top-40">{% for post in site.categories["news"] limit:3 %}
-    <div class="col-lg-4 col-md-6 margin-btm-20">
+    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 margin-btm-20">
       <div class="news-sec">
         <a data-title="{{ post.title }}" href="{{ site.url }}{{ post.url }}"><mip-img src="{{ site.url }}/images/news/{{ post.image }}.jpg" alt="{{ post.title }}"></mip-img></a>
         <div class="news-desc">
