--- a/products/_posts/2019-11-22-hrd858.html
+++ b/products/_posts/2019-11-22-hrd858.html
@@ -4,6 +4,22 @@ permalink: /products/hrd-858.html
 category: products
 proname: 全自动样品整经机
 model: HRD-858
+voltage: 220/380
+power: 0.75
+speed: 600-720RPM(可自调)
+control-method: wu
+winding-method: wu
+max-winding-process: wu
+bobbin-size: wu
+tape-number: wu
+tape-width: wu
+roll-width: wu
+airpre: 2 P
+warping-number: 300
+warping-yards: 2000
+scope: 通用盘头
+size: 1500 x 730 x 1050
+weight: 210
 image: hrd-858
 features-1: 1-10根纱即可快速上盘整经。
 features-2: 全智能控制伸缩出纱，更有效贴近盘头。
