--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ full_title: 荣钜机械
 <div class="home-about">
   <div class="container">
     <p class="title-3 text-black text-center margin-top-40">荣钜机械</p>
-    <div class="row margin-top-40 margin-btm-20">
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 margin-btm-20">
+    <div class="row margin-top-40">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 margin-btm-10">
         <p><mip-img src="{{ site.url }}/images/home/about.jpg" class="img-thumbnail" alt="奇点科技"></mip-img></p>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-indent-2">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-indent-2">
         <p>广东省佛山市南海荣钜机械有限公司（原佛山市南海区里水荣达机械厂），创建于2001年，位于有武术之乡美称的黄飞鸿故乡，是一家专业从事鞋带、绳带、织带服装辅料，电线及绝缘导管编织等机械辅助设备的设计、生产、销售以及服务于一体的科技型工厂；工厂以全自动样品整经机、全自动高速分纱机、全自动双锭纬纱机（打线机）、多功能全自动纬纱机（绕纱机）为主打产品；产品畅销全国各地，并外销西班牙，越南、泰国、孟加拉、印度等东南亚国家和南美洲地区，深受客户一致好评。<a href="{{ site.url }}/about/">了解更多</a></p>
       </div>
     </div>
