--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,12 +6,18 @@ title: 联系我们
 keywords: 
 description: 
 ---
-<p class="title-4 text-red margin-btm-20">联系方式</p>
-<p><i class="fas fa-map-marker-alt"></i> 地址：{{ site.address }}</p>
-<p><i class="fas fa-phone"></i> 电话：<a href="tel:{{ site.tel1 }}">{{ site.tel }}</a></p>
-<p><i class="fas fa-mobile-alt"></i> 业务洽谈：<a href="tel:{{ site.phone }}">{{ site.phone }}</a>（郭先生）</p>
-<p><i class="fab fa-qq"></i> QQ：<a href="http://wpa.qq.com/msgrd?v=3&uin={{ site.qq }}&site=qq&menu=yes">{{ site.qq }}</a></p>
-<p><i class="fas fa-fax"></i> 传真：{{ site.fax }}</p>
-<p><i class="fas fa-envelope"></i> 邮箱：{{ site.email }}</p>
-<p><i class="fab fa-weixin"></i> 微信：<span on="tap:weixin.toggle" id="btn-open" tabindex="0">{{ site.weixin }}(点击扫码)</span></p>
-<a href="https://j.map.baidu.com/40/3Zi" target="_blank"><mip-img src="/images/contact/map.jpg" class="img-thumbnail" alt="荣钜机械百度地图"></mip-img></a>
+<div class="row">
+  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 margin-btm-20">
+    <p class="title-4 text-red margin-btm-20">联系方式</p>
+    <p><i class="fas fa-map-marker-alt"></i> 地址：{{ site.address }}</p>
+    <p><i class="fas fa-phone"></i> 电话：<a href="tel:{{ site.tel1 }}">{{ site.tel }}</a></p>
+    <p><i class="fas fa-mobile-alt"></i> 业务洽谈：<a href="tel:{{ site.phone }}">{{ site.phone }}</a>（郭先生）</p>
+    <p><i class="fab fa-qq"></i> QQ：<a href="http://wpa.qq.com/msgrd?v=3&uin={{ site.qq }}&site=qq&menu=yes">{{ site.qq }}</a></p>
+    <p><i class="fas fa-fax"></i> 传真：{{ site.fax }}</p>
+    <p><i class="fas fa-envelope"></i> 邮箱：{{ site.email }}</p>
+    <p><i class="fab fa-weixin"></i> 微信：<span on="tap:weixin.toggle" id="btn-open" tabindex="0">{{ site.weixin }}(点击扫码)</span></p>
+  </div>
+  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 margin-btm-20">
+  	<a href="https://j.map.baidu.com/40/3Zi" target="_blank"><mip-img src="/images/contact/map.jpg" class="img-thumbnail" alt="荣钜机械百度地图"></mip-img></a>
+  </div>
+</div>
