--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@ keywords:
 description: 
 ---
 <div class="row">
-  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 margin-btm-20">
+  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center margin-btm-20">
     <p class="title-4 text-red margin-btm-20">联系方式</p>
     <p><i class="fas fa-map-marker-alt"></i> 地址：{{ site.address }}</p>
     <p><i class="fas fa-phone"></i> 电话：<a href="tel:{{ site.tel1 }}">{{ site.tel }}</a></p>
