--- a/products/_posts/2019-11-08-hrd828.html
+++ b/products/_posts/2019-11-08-hrd828.html
@@ -14,7 +14,7 @@ bobbin-size: wu
 tape-number: wu
 tape-width: wu
 roll-width: wu
-airpre: /
+airpre: wu
 warping-number: wu
 warping-yards: wu
 scope: 50/210
