--- a/products/_posts/2019-11-16-hrd818.html
+++ b/products/_posts/2019-11-16-hrd818.html
@@ -34,3 +34,12 @@ title: 全自动双锭纬纱机HRD-818
 keywords: 
 description: 
 ---
+<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
+  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+</div>
+<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
+  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+</div>
+<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
+  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-3.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+</div>
