--- a/products/_posts/2019-11-18-hrd839.html
+++ b/products/_posts/2019-11-18-hrd839.html
@@ -34,3 +34,15 @@ title: 全自动高速分纱机HRD-839
 keywords: 
 description: 
 ---
+<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
+  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+</div>
+<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
+  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+</div>
+<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
+  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-3.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+</div>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 margin-btm-20">
+  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-4.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+</div>
