--- a/products/_posts/2019-10-26-hrd820.html
+++ b/products/_posts/2019-10-26-hrd820.html
@@ -5,8 +5,8 @@ category: products
 proname: 全自动切管机
 model: HRD-820
 voltage: 220
-power: /
-speed: /
+power: wu
+speed: wu
 control-method: wu
 winding-method: wu
 max-winding-process: wu
