--- a/products/_posts/2019-11-06-hrd826.html
+++ b/products/_posts/2019-11-06-hrd826.html
@@ -5,7 +5,7 @@ category: products
 proname: 双锭单控纬纱机
 model: HRD-826
 voltage: 220/380
-power: 0.4
+power: 0.75
 speed: 2800RPM
 control-method: 单锭独立
 winding-method: 平行卷绕
@@ -17,7 +17,7 @@ roll-width: wu
 airpre: wu
 warping-number: wu
 warping-yards: wu
-scope: 50/210
+scope: wu
 size: 1200 x 1400 x 1600
 weight: 140
 image: hrd-826
