--- a/products/_posts/2019-11-10-hrd829.html
+++ b/products/_posts/2019-11-10-hrd829.html
@@ -5,7 +5,7 @@ category: products
 proname: 多功能全自动纬纱机
 model: HRD-829
 voltage: 220/440
-power: 0.4
+power: 0.75
 speed: 2800RPM
 control-method: wu
 winding-method: wu
@@ -23,14 +23,14 @@ weight: 140
 image: hrd-829
 features-1: PLC控制回路。
 features-2: 断纱自动停机，记忆保留。
-features-3: 卷取速度可任意调整，设有低高速起动切换功能。
-features-4: 电子计数，可控制纱线层次，利于统一换管。
-features-5: 显示数量，便于生产管理控制，提高生产效率。
-features-6: 马达排线均匀，确保张力恒定，易出纱线，且不留纱底，减少纱损耗。
-features-7: 纱线卷装完成，卸料装置自动上下接着，防止纱线沾污，碰撞及松弛，确保品质。
+features-3: 卷取速度可任意调整，设有高低速起动切换功能。
+features-4: 双层溜槽，增加了计码功能，既可控制纱线层数、纱管个数，又可控制纱线长度，减少偏差。可统一在编织机上一次性换管，大大提高生产效率。
+features-5: 纱线卷装完成，卸料装置自动上下接着，适合白色纱线及成本偏高类纱线，防止纱线沾污，碰撞及松驰，确保品质。
+features-6: wu
+features-7: wu
 features-8: wu
 application: 适用于各种绳带、织带、花边、电线、编织用。
-title: 多功能全自动纬纱机HRD-829
+title: 多功能全自动双层计码纬纱机HRD-829
 keywords: 
 description: 
 ---
