--- a/products/_posts/2019-11-02-hrd848.html
+++ b/products/_posts/2019-11-02-hrd848.html
@@ -27,7 +27,7 @@ features-3: 整经数每分钟可达1000码以上，上手快，易操作。
 features-4: 全自动 PLC系统控制，大屏幕智能识别人机界面。
 features-5: 广泛使用于打样，间色带拉盘，小批量订单，尾数补数等。
 features-6: 程序设置清晰，整经条数和码数均在系统上显示，出盘效果平整，出纱效果顺畅，不压纱，不起毛。
-features-7: 平整，出纱效果顺畅，不压纱，不起毛。故障自停警报装置，确保系统安全可靠耐用度。
+features-7: 全程自动化，无需人手管理，实时监测机器运转状态，断纱故障自停报警装置，确保系统安全可靠耐用度。
 features-8: wu
 application: 各类织带厂样板和中小订单经纱专用。
 title: 全自动样品整经机HRD-848
