--- a/products/_posts/2019-10-22-hrd821.html
+++ b/products/_posts/2019-10-22-hrd821.html
@@ -30,6 +30,7 @@ features-6: wu
 features-7: wu
 features-8: wu
 application: 清理绳带编织完后纱管的尾纱。
+case: wu
 title: 半自动清纱机HRD-821
 keywords: 
 description: 
