--- a/products/_posts/2019-10-28-hrd823.html
+++ b/products/_posts/2019-10-28-hrd823.html
@@ -30,6 +30,7 @@ features-6: wu
 features-7: wu
 features-8: wu
 application: 本机型适用于绳带，松紧带、丝绒带、丝带等各种绳带，织带类，采用横卷交叉式摇摆于纸管上，可节省包装之空间，依带子之厚薄种类可卷500～3000米，减小带子之接头，速度可调整，依带子宽度可调整摇摆器之左右距离，带子准确平整盘于纸管表面，是目前动作最简便、卷带最先进机械。
+case: wu
 title: 织带包装机HRD-823
 keywords: 
 description: 
