--- a/products/_posts/2019-11-06-hrd826.html
+++ b/products/_posts/2019-11-06-hrd826.html
@@ -30,6 +30,7 @@ features-6: wu
 features-7: wu
 features-8: wu
 application: 高速、刺绣、花边管等多种。
+case: four
 title: 双锭单控纬纱机HRD-826
 keywords: 
 description: 
