--- a/products/_posts/2019-11-10-hrd829.html
+++ b/products/_posts/2019-11-10-hrd829.html
@@ -30,6 +30,7 @@ features-6: wu
 features-7: wu
 features-8: wu
 application: 适用于各种绳带、织带、花边、电线、编织用。
+case: four
 title: 多功能全自动双层计码纬纱机HRD-829
 keywords: 
 description: 
