--- a/products/_posts/2019-11-16-hrd818.html
+++ b/products/_posts/2019-11-16-hrd818.html
@@ -30,6 +30,7 @@ features-6: wu
 features-7: wu
 features-8: wu
 application: 适用于各种绳带、织带、花边、电线、编织用。
+case: four
 title: 全自动双锭纬纱机HRD-818
 keywords: 
 description: 
