--- a/products/_posts/2019-11-20-hrd838.html
+++ b/products/_posts/2019-11-20-hrd838.html
@@ -30,6 +30,7 @@ features-6: wu
 features-7: wu
 features-8: wu
 application: 各类织带厂样板和中小订单经纱专用。
+case: four
 title: 全自动样品整经机HRD-838
 keywords: 
 description: 
