--- a/products/_posts/2019-10-20-hrd828.html
+++ b/products/_posts/2019-10-20-hrd828.html
@@ -31,6 +31,7 @@ features-7: wu
 features-8: wu
 application: 适用于各种绳带、织带、花边、电线、编织用。
 case: three
+home: home
 title: 全自动双锭计码纬纱机HRD-828
 keywords: 
 description: 
