--- a/products/_posts/2019-11-10-hrd-829.html
+++ b/products/_posts/2019-11-10-hrd-829.html
@@ -36,3 +36,9 @@ title: 多功能全自动双层计码纬纱机HRD-829
 keywords: 
 description: 
 ---
+<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
+  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+</div>
+<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 margin-btm-20">
+  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+</div>
