--- a/products/_posts/2019-11-08-hrd-818.html
+++ b/products/_posts/2019-11-08-hrd-818.html
@@ -26,7 +26,7 @@ features-2: 适用于不同长度、外径纱管。
 features-3: 结构简单、体积小、易操作和保管。
 features-4: 多位自动断纱装置，断纱自动停机。
 features-5: 马达排线、绕线均匀，易出纱线，且不留纱底，减少纱损耗。
-features-6: wu
+features-6: 可计纱线圈数
 features-7: wu
 features-8: wu
 application: 适用于各种绳带、织带、花边、电线、编织用。
