--- a/products/_posts/2019-11-10-hrd-829.html
+++ b/products/_posts/2019-11-10-hrd-829.html
@@ -21,15 +21,20 @@ scope: 80/210
 size: 1400 x 1600 x 1600
 weight: 140
 image: hrd-829
-features-1: PLC控制回路。
-features-2: 断纱自动停机，记忆保留。
-features-3: 卷取速度可任意调整，设有高低速起动切换功能。
-features-4: 双层溜槽，增加了计码功能，既可控制纱线层数、纱管个数，又可控制纱线长度，减少偏差。可统一在编织机上一次性换管，大大提高生产效率。
-features-5: 纱线卷装完成，卸料装置自动上下接着，适合白色纱线及成本偏高类纱线，防止纱线沾污，碰撞及松驰，确保品质。
+features-1: 有计码功能，打出的纱线长度统一，可实现在编织机上一次性换纱，故减少停机时间，可提升产量20%-30%，大大减少纱线浪费，更节省人工；
+features-2: 两边可单独计码，绕纱长度精准，双马达双变频，减少偏差；
+features-3: 机械手自动接料功能升级，双层溜槽，容量增大，纱线卷装完成自动接料并在两层整齐排列，防止纱管掉落纱线沾污，碰撞及松驰，确保品质；
+features-4: 触摸屏显示生产数据，便于生产管理控制，提高生产效率；
+features-5: wu
 features-6: wu
 features-7: wu
 features-8: wu
-application: 适用于各种绳带、织带、花边、电线、编织用。
+application: 绳带机，编织机专用，一台纬纱机可配备6~8台编织机使用
+table: t2
+control-mode: 控制纱线圈数、纱管个数且可定长计码
+code-number: 可计码
+touch-screen-control: 有
+discharge-chute: 双层
 case: four
 home: home
 title: 多功能全自动双层计码纬纱机HRD-829
