--- a/products/_posts/2019-11-18-hrd-828.html
+++ b/products/_posts/2019-11-18-hrd-828.html
@@ -21,15 +21,20 @@ scope: 50/210
 size: 900 x 1400 x 1600
 weight: 100
 image: hrd-828
-features-1: 全自动PLC系统控制，大屏幕智能识别人机界面。
-features-2: 电子计数计码，可精准控制纱线长度，可做到一次性换纱管，极大提升效率。
-features-3: 卷取速度可任意调整，设有低高速起动切换功能。
-features-4: 断纱自动停机，记忆保留。
-features-5: 显示数量，便于生产管理控制，提高生产效率。
-features-6: 马达排线均匀，确保张力恒定，易出纱线，且不留纱底，减少纱损耗。
+features-1: 有计码功能，打出的纱线长度统一，可实现在编织机上一次性换纱，故减少停机时间，可提升产量20%-30%，大大减少纱线浪费，更节省人工；
+features-2: 触屏控制，两边可单独计码，绕纱长度精准，双马达双变频，减少偏差；
+features-3: 触摸屏实时显示生产数据，便于生产管理控制，极大提高生产率。
+features-4: wu
+features-5: wu
+features-6: wu
 features-7: wu
 features-8: wu
-application: 适用于各种绳带、织带、花边、电线、编织用。
+application: 绳带机，编织机专用，一台纬纱机可配备6~8台编织机使用
+table: t2
+control-mode: 控制纱线圈数、纱管个数且可定长计码
+code-number: 可计码
+touch-screen-control: 有
+discharge-chute: 无
 case: four
 home: home
 title: 全自动双锭计码纬纱机HRD-828
