--- a/products/_posts/2019-11-20-hrd-839.html
+++ b/products/_posts/2019-11-20-hrd-839.html
@@ -21,15 +21,15 @@ scope: 210/320
 size: 1200 x 1800 x 1600
 weight: 210
 image: hrd-839
-features-1: 断纱自动停机，记忆保留。
-features-2: 卷取速度可任意调整，设有低高速起动切换功能。
-features-3: 显示数量，便于生产管理控制，提高生产效率。
-features-4: PLC控制回路，触摸屏控制，实时监控生产数量，便于生产管理控制。
-features-5: 定长计码，用低弹纱管自动拉纱，取代传统的手动络筒机和分纱机，节省宝贵人工，减少纱线浪费。
-features-6: 马达排线均匀，确保张力，恒定，易出纱线，且不留纱底，减少纱损耗。
-features-7: 纱线卷装完成，卸料装置自动上下接着，防止纱线沾污，碰撞及松驰，确保品质。
+features-1: 取代传统的手动络筒机和分纱机，定长计码，用低弹纱管自动拉纱，节省宝贵人工，减少纱线浪费；
+features-2: 每分钟绕纱速度达700码，速度更快，效率更高；
+features-3: 纱线卷装完成，机械手自动接料整齐排列，防止纱筒掉落纱线沾污，碰撞及松驰，确保品质。
+features-4: 触摸屏实时显示生产数据，便于生产管理控制，极大提高生产率；
+features-5: wu
+features-6: wu
+features-7: wu
 features-8: wu
-application: 各类织带厂样板和中小订单分纱专用。
+application: 织带机，无梭机，各类织带厂、拉链厂中小订单专用。
 case: four
 home: home
 title: 全自动高速分纱机HRD-839
