--- a/products/_posts/2019-11-12-hrd-819.html
+++ b/products/_posts/2019-11-12-hrd-819.html
@@ -21,15 +21,20 @@ scope: 80/210
 size: 1400 x 1600 x 1500
 weight: 130
 image: hrd-819
-features-1: PLC控制回路。
-features-2: 断纱自动停机，记忆保留。
-features-3: 卷取速度可任意调整，设有低高速起动切换功能。
-features-4: 电子计数，可控制纱线层次，利于统一换管。
-features-5: 显示数量，便于生产管理控制，提高生产效率。
-features-6: 马达排线均匀，确保张力恒定，易出纱线，且不留纱底，减少纱损耗。
-features-7: 纱线卷装完成，卸料装置自动上下接着，防止纱线沾污，碰撞及松弛，确保品质。
+features-1: 新增机械手自动接料功能，纱线卷装完成自动接料并整齐排列，适合白色纱线及成本较高类纱线，防止纱管掉落纱线沾污，碰撞及松驰，确保品质。
+features-2: 电子计数，既可控制绕纱圈数也可计算纱管个数，利于统一换管；
+features-3: 触摸屏显示生产数据，便于生产管理控制，提高生产效率；
+features-4: wu
+features-5: wu
+features-6: wu
+features-7: wu
 features-8: wu
-application: 适用于各种绳带、织带、花边、电线、编织用。
+application: 绳带机，编织机专用，一台纬纱机可配备6~8台编织机使用
+table: t2
+control-mode: 控制纱线圈数和纱管个数
+code-number: 不可计
+touch-screen-control: 有
+discharge-chute: 单层
 case: four
 title: 多功能全自动纬纱机HRD-819
 keywords: 
