--- a/products/_posts/2019-11-16-hrd-826.html
+++ b/products/_posts/2019-11-16-hrd-826.html
@@ -21,15 +21,20 @@ scope: wu
 size: 1200 x 1400 x 1600
 weight: 140
 image: hrd-826
-features-1: 采用单锭控制方式，变频调节电脑操作，自动化程度高，大大的节约了生产中的浪费。
-features-2: 触摸屏控制，实时监控生产数量，便于生产管理控制。
-features-3: 卷取速度可任意调整，设有低高速起动切换功能。
-features-4: 产品成型美观不起毛，并配有精准的定长裝置及自动换管等功能。
-features-5: 马达排线均匀，确保张力恒定，易出纱线，且不留纱底，减少纱损耗。
+features-1: 新增自动钩剪纱尾功能，更省人工；
+features-2: 有计码功能，打出的纱线长度统一，可实现在编织机上一次性换纱，故减少停机时间，可提升产量20%-30%，大大减少纱线浪费，更节省人工；
+features-3: 触屏控制，双锭单控计码，两边可绕不同尺寸的纱管，实现单锭独立控制，双马达双变频，计码精准，功能强大；
+features-4: 触摸屏实时显示生产数据，便于生产管理控制，极大提高生产率；
+features-5: wu
 features-6: wu
 features-7: wu
 features-8: wu
-application: 高速、刺绣、花边管等多种。
+application: 绳带机，编织机专用，一台纬纱机可配备6~8台编织机使用
+table: t2
+control-mode: 单锭独立控制，纱线圈数、纱管个数且可定长计码
+code-number: 可计码
+touch-screen-control: 有
+discharge-chute: 无
 case: four
 title: 双锭单控纬纱机HRD-826
 keywords: 
