--- a/products/_posts/2019-11-22-hrd-838.html
+++ b/products/_posts/2019-11-22-hrd-838.html
@@ -16,33 +16,41 @@ tape-width: wu
 roll-width: wu
 airpre: 2 P
 warping-number: wu
-warping-yards: wu
+warping-yards: 100
 scope: 260/300
 size: 1500 x 680 x 980
 weight: 135
 image: hrd-838
-features-1: 全自动PLC系统控制，大屏幕智能识别人机界面。
-features-2: 程序设置清晰，整经条数和码数均在系统上显示，上手快，易操作。
-features-3: 整经平整，长度精准，出盘纱线全程无压线，出纱顺畅不起毛。
-features-4: 全程自动化，无需人手管理，实时监测机器运转状态，断纱故障自停警报装置，确保系统安全可靠耐用度。
-features-5: 无需分纱再拉纱，节省人工，节约纱线，节省时间，提高样板和小批量订单生产效率。
-features-6: wu
+features-1: 1-2根纱即可快速上盘整经；
+features-2: 最多可拉100条，2KG；
+features-3: 整经数每分钟800码以上；
+features-4: 盘头尺寸：盘面外径300mm*盘头外长295mm；
+features-5: 无需分纱再拉纱，节省人工，节约纱线，提高样板和小批量订单生产效率；
+features-6: 出纱顺畅，不压纱，不起毛，广泛应用于打样，间色带拉盘，小批量订单，补数等。
 features-7: wu
 features-8: wu
-application: 各类织带厂样板和中小订单经纱专用。
+application: 织带机，无梭机，各类织带厂、拉链厂中小订单和打样板专用。
+table: t1
+yarn-count: 1-2
+kilogram-number: 2
+max-code-number: 1000
+pan-head-size: 300 x 295
 case: four
 title: 全自动样品整经机HRD-838
 keywords: 
 description: 
 ---
-<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
   <mip-img src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
-<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
   <mip-img src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
-<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
   <mip-img src="{{ site.url }}/images/products/{{ page.image }}-3.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+</div>
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
+  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-4.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 margin-btm-20">
   <mip-img src="{{ site.url }}/images/products/{{ page.image }}-4.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
