--- a/products/_posts/2019-11-26-hrd-848.html
+++ b/products/_posts/2019-11-26-hrd-848.html
@@ -16,22 +16,30 @@ tape-width: wu
 roll-width: wu
 airpre: 2 P
 warping-number: wu
-warping-yards: wu
+warping-yards: 200
 scope: 260/300
 size: 1500 x 680 x 850
 weight: 155
 image: hrd-848
-features-1: 1-10根纱即可快速上盘整经。
-features-2: 全智能控制伸缩出纱，更有效贴近盘头。
-features-3: 整经数每分钟可达1000码以上，上手快，易操作。
-features-4: 全自动 PLC系统控制，大屏幕智能识别人机界面。
-features-5: 广泛使用于打样，间色带拉盘，小批量订单，尾数补数等。
-features-6: 程序设置清晰，整经条数和码数均在系统上显示，出盘效果平整，出纱效果顺畅，不压纱，不起毛。
-features-7: 全程自动化，无需人手管理，实时监测机器运转状态，断纱故障自停报警装置，确保系统安全可靠耐用度。
+features-1: 1-8根纱即可快速上盘整经；
+features-2: 最多可拉200条，2.5KG；
+features-3: 整经数每分钟可达4000码以上；
+features-4: 盘头尺寸：盘面外径300mm*盘头外长295mm；
+features-5: 全智能控制伸缩出纱，更有效贴近盘头，出纱顺畅，不压纱，不起毛；
+features-6: 广泛应用于打样，间色带拉盘，小批量订单，补数等。
+features-7: wu
 features-8: wu
-application: 各类织带厂样板和中小订单经纱专用。
+application: 织带机，无梭机，各类织带厂、拉链厂中小订单和打样板专用。
+table: t1
+yarn-count: 1-8
+kilogram-number: 2.5
+max-code-number: 2000
+pan-head-size: 300 x 295
 case: four
 title: 全自动样品整经机HRD-848
 keywords: 
 description: 
 ---
+<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 margin-btm-20">
+  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+</div>
