--- a/products/_posts/2019-11-28-hrd-858.html
+++ b/products/_posts/2019-11-28-hrd-858.html
@@ -16,35 +16,43 @@ tape-width: wu
 roll-width: wu
 airpre: 2 P
 warping-number: 300
-warping-yards: 2000
+warping-yards: 200
 scope: 通用盘头
 size: 1500 x 730 x 1050
 weight: 210
 image: hrd-858
-features-1: 1-10根纱即可快速上盘整经。
-features-2: 全智能控制伸缩出纱，更有效贴近盘头。
-features-3: 整经数每分钟可达1500码以上，上手快，易操作。
-features-4: 全自动升降装卸盘头，安全又省力。
-features-5: 全自动 PLC系统控制，大屏幕智能识别人机界面。
-features-6: 广泛使用于打样，间色带拉盘，小批量订单，尾数补数等。
-features-7: 程序设置清晰，整经条数和码数均在系统上显示，出盘效果平整，出纱效果顺畅，不压纱，不起毛。
-features-8: 全程自动化，无需人手管理，实时监测机器运转状态，断纱故障自停警报装置，确保系统安全可靠耐用度。
-application: 各类织带厂中小订单经纱打样板专用
+features-1: 1-8根纱即可快速上盘整经；
+features-2: 最多可拉200条，4.5KG；
+features-3: 整经数每分钟可达5000码以上，速度更快，容量更大；
+features-4: 盘头尺寸：盘面外径365mm*盘头外长305mm；
+features-5: 全自动升降装卸盘头，更加人性化，既安全又省力；
+features-6: 全智能控制伸缩出纱，更有效贴近盘头，出纱顺畅，不压纱，不起毛；
+features-7: 广泛应用于打样，间色带拉盘，小批量订单，补数等。
+features-8: wu
+application: 织带机，无梭机，各类织带厂、拉链厂中小订单和打样板专用
+table: t1
+yarn-count: 1-8
+kilogram-number: 4.5
+max-code-number: 4000
+pan-head-size: 365 x 305
 case: four
 home: home
 title: 全自动样品整经机HRD-858
 keywords: 
 description: 
 ---
-<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
   <mip-img src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
-<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
   <mip-img src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
-<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
   <mip-img src="{{ site.url }}/images/products/{{ page.image }}-3.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 margin-btm-20">
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
   <mip-img src="{{ site.url }}/images/products/{{ page.image }}-4.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+</div>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 margin-btm-20">
+  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-5.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
