--- a/products/_posts/2019-11-22-hrd-838.html
+++ b/products/_posts/2019-11-22-hrd-838.html
@@ -41,17 +41,17 @@ keywords:
 description: 
 ---
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
-  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
-  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
-  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-3.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-3.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
-  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-4.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-4.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 margin-btm-20">
-  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-4.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-4.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
