--- a/products/_posts/2019-11-26-hrd-848.html
+++ b/products/_posts/2019-11-26-hrd-848.html
@@ -5,8 +5,8 @@ category: products
 proname: 全自动样品整经机
 model: HRD-848
 voltage: 220/380
-power: 0.75
-speed: 260RPM
+power: 1.0
+speed: 600 RPM
 control-method: wu
 winding-method: wu
 max-winding-process: wu
@@ -15,9 +15,9 @@ tape-number: wu
 tape-width: wu
 roll-width: wu
 airpre: 2 P
-warping-number: wu
-warping-yards: 200
-scope: 260/300
+warping-number: 200
+warping-yards: 2000
+scope: wu
 size: 1500 x 680 x 850
 weight: 155
 image: hrd-848
@@ -41,5 +41,5 @@ keywords:
 description: 
 ---
 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 margin-btm-20">
-  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
