--- a/products/_posts/2019-11-16-hrd-826.html
+++ b/products/_posts/2019-11-16-hrd-826.html
@@ -41,11 +41,11 @@ keywords:
 description: 
 ---
 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
-  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
-  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 margin-btm-20">
-  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-3.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-3.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
