--- a/products/_posts/2019-11-28-hrd-858.html
+++ b/products/_posts/2019-11-28-hrd-858.html
@@ -5,8 +5,8 @@ category: products
 proname: 全自动样品整经机
 model: HRD-858
 voltage: 220/380
-power: 0.75
-speed: 600-720RPM(可自调)
+power: 1.5
+speed: 600 RPM
 control-method: wu
 winding-method: wu
 max-winding-process: wu
@@ -15,9 +15,9 @@ tape-number: wu
 tape-width: wu
 roll-width: wu
 airpre: 2 P
-warping-number: 300
-warping-yards: 200
-scope: 通用盘头
+warping-number: 200
+warping-yards: 4000
+scope: wu
 size: 1500 x 730 x 1050
 weight: 210
 image: hrd-858
@@ -42,17 +42,17 @@ keywords:
 description: 
 ---
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
-  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
-  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
-  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-3.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-3.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
-  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-4.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-4.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 margin-btm-20">
-  <mip-img src="{{ site.url }}/images/products/{{ page.image }}-5.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-5.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
