--- a/products/_posts/2019-11-06-hrd-820.html
+++ b/products/_posts/2019-11-06-hrd-820.html
@@ -8,16 +8,15 @@ voltage: 220
 power: wu
 speed: wu
 control-method: wu
-winding-method: wu
-max-winding-process: wu
-bobbin-size: wu
+bobbin-size: 48 x 140
 tape-number: wu
 tape-width: wu
 roll-width: wu
 airpre: 2 P
 warping-number: wu
 warping-yards: wu
-scope: 80/210
+pan-head-size: wu
+paper-tube-size: wu
 size: 1000 x 500 x 1000
 weight: 130
 image: hrd-820
