--- a/products/_posts/2019-11-10-hrd-829.html
+++ b/products/_posts/2019-11-10-hrd-829.html
@@ -4,20 +4,19 @@ permalink: /products/hrd-829.html
 category: products
 proname: 多功能全自动纬纱机
 model: HRD-829
-voltage: 220/440
+voltage: 220/380
 power: 0.75
-speed: 2800RPM
+speed: 4000
 control-method: wu
-winding-method: wu
-max-winding-process: wu
-bobbin-size: wu
+bobbin-size: 50~210
 tape-number: wu
 tape-width: wu
 roll-width: wu
 airpre: wu
 warping-number: wu
 warping-yards: wu
-scope: 80/210
+pan-head-size: wu
+paper-tube-size: wu
 size: 1400 x 1600 x 1600
 weight: 140
 image: hrd-829
