--- a/products/_posts/2019-11-16-hrd-826.html
+++ b/products/_posts/2019-11-16-hrd-826.html
@@ -6,10 +6,8 @@ proname: 双锭单控纬纱机
 model: HRD-826
 voltage: 220/380
 power: 0.75
-speed: 2800RPM
+speed: 4000
 control-method: 单锭独立
-winding-method: 平行卷绕
-max-winding-process: 200mm
 bobbin-size: 50~210
 tape-number: wu
 tape-width: wu
@@ -17,7 +15,8 @@ roll-width: wu
 airpre: wu
 warping-number: wu
 warping-yards: wu
-scope: wu
+pan-head-size: wu
+paper-tube-size: wu
 size: 1200 x 1400 x 1600
 weight: 140
 image: hrd-826
