--- a/products/_posts/2019-11-18-hrd-828.html
+++ b/products/_posts/2019-11-18-hrd-828.html
@@ -4,20 +4,19 @@ permalink: /products/hrd-828.html
 category: products
 proname: 全自动双锭计码纬纱机
 model: HRD-828
-voltage: 220/440
-power: 0.4
-speed: 2800RPM
+voltage: 220/380
+power: 0.75
+speed: 4000
 control-method: wu
-winding-method: wu
-max-winding-process: wu
-bobbin-size: wu
+bobbin-size: 50~210
 tape-number: wu
 tape-width: wu
 roll-width: wu
 airpre: wu
 warping-number: wu
 warping-yards: wu
-scope: 50/210
+pan-head-size: wu
+paper-tube-size: wu
 size: 900 x 1400 x 1600
 weight: 100
 image: hrd-828
