--- a/products/_posts/2019-11-22-hrd-838.html
+++ b/products/_posts/2019-11-22-hrd-838.html
@@ -6,18 +6,16 @@ proname: 全自动样品整经机
 model: HRD-838
 voltage: 220/380
 power: 0.75
-speed: 260RPM
+speed: 450
 control-method: wu
-winding-method: wu
-max-winding-process: wu
 bobbin-size: wu
 tape-number: wu
 tape-width: wu
 roll-width: wu
 airpre: 2 P
-warping-number: wu
-warping-yards: 100
-scope: 260/300
+warping-number: 100
+warping-yards: 1000
+paper-tube-size: wu
 size: 1500 x 680 x 980
 weight: 135
 image: hrd-838
@@ -53,5 +51,5 @@ description:
   <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-4.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 margin-btm-20">
-  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-4.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-5.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
