--- a/products/_posts/2019-11-26-hrd-848.html
+++ b/products/_posts/2019-11-26-hrd-848.html
@@ -6,10 +6,8 @@ proname: 全自动样品整经机
 model: HRD-848
 voltage: 220/380
 power: 1.0
-speed: 600 RPM
+speed: 600
 control-method: wu
-winding-method: wu
-max-winding-process: wu
 bobbin-size: wu
 tape-number: wu
 tape-width: wu
@@ -17,7 +15,7 @@ roll-width: wu
 airpre: 2 P
 warping-number: 200
 warping-yards: 2000
-scope: wu
+paper-tube-size: wu
 size: 1500 x 680 x 850
 weight: 155
 image: hrd-848
