--- a/products/_posts/2019-11-02-hrd-821.html
+++ b/products/_posts/2019-11-02-hrd-821.html
@@ -5,19 +5,18 @@ category: products
 proname: 半自动清纱机
 model: HRD-821
 voltage: 220
-power: 0.75
-speed: 1280RPM
+power: 0.4
+speed: 1280
 control-method: wu
-winding-method: wu
-max-winding-process: wu
-bobbin-size: wu
+bobbin-size: 50~210
 tape-number: wu
 tape-width: wu
 roll-width: wu
 airpre: wu
 warping-number: wu
 warping-yards: wu
-scope: 80/210
+pan-head-size: wu
+paper-tube-size: wu
 size: 700 x 500 x 1000
 weight: 60
 image: hrd-821
