--- a/products/_posts/2019-11-08-hrd-818.html
+++ b/products/_posts/2019-11-08-hrd-818.html
@@ -4,26 +4,25 @@ permalink: /products/hrd-818.html
 category: products
 proname: 全自动双锭纬纱机
 model: HRD-818
-voltage: 220/440
+voltage: 220/380
 power: 0.4
-speed: 2800RPM
+speed: 3800
 control-method: wu
-winding-method: wu
-max-winding-process: wu
-bobbin-size: wu
+bobbin-size: 50~210
 tape-number: wu
 tape-width: wu
 roll-width: wu
 airpre: wu
 warping-number: wu
 warping-yards: wu
-scope: 50/210
+pan-head-size: wu
+paper-tube-size: wu
 size: 900 x 1400 x 1500
 weight: 90
 image: hrd-818
 features-1: 可计纱线圈数；
 features-2: 可定制变频调速功能；
-features-3: 可加装金银线、反光条装置和变频调速装置；
+features-3: 可加装金银线、反光条装置；
 features-4: 常规采用电热熔断纱线，可定制剪刀切断纱线结构；
 features-5: 马达排线、绕线均匀，易出纱线，且不留纱底，减少纱损耗。
 features-6: wu
