--- a/products/_posts/2019-11-12-hrd-819.html
+++ b/products/_posts/2019-11-12-hrd-819.html
@@ -4,26 +4,25 @@ permalink: /products/hrd-819.html
 category: products
 proname: 多功能全自动纬纱机
 model: HRD-819
-voltage: 220/440
+voltage: 220/380
 power: 0.4
-speed: 2800RPM
+speed: 3800
 control-method: wu
-winding-method: wu
-max-winding-process: wu
-bobbin-size: wu
+bobbin-size: 50~210
 tape-number: wu
 tape-width: wu
 roll-width: wu
 airpre: wu
 warping-number: wu
 warping-yards: wu
-scope: 80/210
+pan-head-size: wu
+paper-tube-size: wu
 size: 1400 x 1600 x 1500
 weight: 130
 image: hrd-819
-features-1: 新增机械手自动接料功能，纱线卷装完成自动接料并整齐排列，适合白色纱线及成本较高类纱线，防止纱管掉落纱线沾污，碰撞及松驰，确保品质。
+features-1: 新增机械手自动接料功能，纱线卷装完成自动接料并整齐排列，适合白色纱线及成本较高类纱线，防止纱管掉落纱线沾污，碰撞及松驰，确保品质；
 features-2: 电子计数，既可控制绕纱圈数也可计算纱管个数，利于统一换管；
-features-3: 触摸屏显示生产数据，便于生产管理控制，提高生产效率；
+features-3: 触摸屏显示生产数据，便于生产管理控制，提高生产效率。
 features-4: wu
 features-5: wu
 features-6: wu
