--- a/products/_posts/2019-11-20-hrd-839.html
+++ b/products/_posts/2019-11-20-hrd-839.html
@@ -5,11 +5,9 @@ category: products
 proname: 全自动高速分纱机
 model: HRD-839
 voltage: 220/380
-power: 0.75
-speed: 700RPM
+power: 0.4
+speed: 2000
 control-method: wu
-winding-method: wu
-max-winding-process: wu
 bobbin-size: wu
 tape-number: wu
 tape-width: wu
@@ -17,14 +15,15 @@ roll-width: wu
 airpre: 2 P
 warping-number: wu
 warping-yards: wu
-scope: 210/320
+pan-head-size: wu
+paper-tube-size: 70 x 280
 size: 1200 x 1800 x 1600
 weight: 210
 image: hrd-839
 features-1: 取代传统的手动络筒机和分纱机，定长计码，用低弹纱管自动拉纱，节省宝贵人工，减少纱线浪费；
 features-2: 每分钟绕纱速度达700码，速度更快，效率更高；
-features-3: 纱线卷装完成，机械手自动接料整齐排列，防止纱筒掉落纱线沾污，碰撞及松驰，确保品质。
-features-4: 触摸屏实时显示生产数据，便于生产管理控制，极大提高生产率；
+features-3: 纱线卷装完成，机械手自动接料整齐排列，防止纱筒掉落纱线沾污，碰撞及松驰，确保品质；
+features-4: 触摸屏实时显示生产数据，便于生产管理控制，极大提高生产率。
 features-5: wu
 features-6: wu
 features-7: wu
