--- a/products/_posts/2019-11-22-hrd-838.html
+++ b/products/_posts/2019-11-22-hrd-838.html
@@ -25,7 +25,7 @@ features-3: 整经数每分钟800码以上；
 features-4: 盘头尺寸：盘面外径300mm*盘头外长295mm；
 features-5: 无需分纱再拉纱，节省人工，节约纱线，提高样板和小批量订单生产效率；
 features-6: 出纱顺畅，不压纱，不起毛，广泛应用于打样，间色带拉盘，小批量订单，补数等。
-features-7: wu
+features-7: 带有给纱线加网、喷节功能。
 features-8: wu
 application: 织带机，无梭机，各类织带厂、拉链厂中小订单和打样板专用。
 table: t1
