--- a/products/_posts/2019-11-26-hrd-848.html
+++ b/products/_posts/2019-11-26-hrd-848.html
@@ -25,7 +25,7 @@ features-3: 整经数每分钟可达4000码以上；
 features-4: 盘头尺寸：盘面外径300mm*盘头外长295mm；
 features-5: 全智能控制伸缩出纱，更有效贴近盘头，出纱顺畅，不压纱，不起毛；
 features-6: 广泛应用于打样，间色带拉盘，小批量订单，补数等。
-features-7: wu
+features-7: 带有给纱线加网、喷节功能。
 features-8: wu
 application: 织带机，无梭机，各类织带厂、拉链厂中小订单和打样板专用。
 table: t1
@@ -40,4 +40,7 @@ description:
 ---
 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 margin-btm-20">
   <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+</div>
+<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 margin-btm-20">
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
