--- a/products/_posts/2019-11-28-hrd-858.html
+++ b/products/_posts/2019-11-28-hrd-858.html
@@ -26,7 +26,7 @@ features-4: 盘头尺寸：盘面外径365mm*盘头外长305mm；
 features-5: 全自动升降装卸盘头，更加人性化，既安全又省力；
 features-6: 全智能控制伸缩出纱，更有效贴近盘头，出纱顺畅，不压纱，不起毛；
 features-7: 广泛应用于打样，间色带拉盘，小批量订单，补数等。
-features-8: wu
+features-8: 带有给纱线加网、喷节功能。
 application: 织带机，无梭机，各类织带厂、拉链厂中小订单和打样板专用
 table: t1
 yarn-count: 1-8
@@ -51,6 +51,9 @@ description:
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
   <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-4.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 margin-btm-20">
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
   <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-5.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+</div>
+<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 margin-btm-20">
+  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-6.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
 </div>
