--- a/products/_posts/2019-11-10-hrd-829.html
+++ b/products/_posts/2019-11-10-hrd-829.html
@@ -36,6 +36,7 @@ touch-screen-control: 有
 discharge-chute: 双层
 case: four
 home: home
+video: XNDUxMTQwNzIwNA==
 title: 多功能全自动双层计码纬纱机HRD-829
 keywords: 
 description: 
