--- a/products/_posts/2019-11-12-hrd-819.html
+++ b/products/_posts/2019-11-12-hrd-819.html
@@ -35,6 +35,7 @@ code-number: 不可计
 touch-screen-control: 有
 discharge-chute: 单层
 case: four
+video: XNDUxMTQwMDExMg==
 title: 多功能全自动纬纱机HRD-819
 keywords: 
 description: 
