--- a/products/_posts/2019-11-16-hrd-826.html
+++ b/products/_posts/2019-11-16-hrd-826.html
@@ -35,6 +35,7 @@ code-number: 可计码
 touch-screen-control: 有
 discharge-chute: 无
 case: four
+video: XNDUxMTQwNjMxMg==
 title: 双锭单控纬纱机HRD-826
 keywords: 
 description: 
