--- a/products/_posts/2019-11-18-hrd-828.html
+++ b/products/_posts/2019-11-18-hrd-828.html
@@ -36,6 +36,7 @@ touch-screen-control: 有
 discharge-chute: 无
 case: four
 home: home
+video: XNDUxMTQwNjY4NA==
 title: 全自动双锭计码纬纱机HRD-828
 keywords: 
 description: 
