--- a/products/_posts/2019-11-22-hrd-838.html
+++ b/products/_posts/2019-11-22-hrd-838.html
@@ -34,6 +34,7 @@ kilogram-number: 2
 max-code-number: 1000
 pan-head-size: 300 x 295
 case: four
+video: XNDUxMTQwNzYwOA==
 title: 全自动样品整经机HRD-838
 keywords: 
 description: 
