--- a/products/_posts/2019-11-28-hrd-858.html
+++ b/products/_posts/2019-11-28-hrd-858.html
@@ -35,6 +35,7 @@ max-code-number: 4000
 pan-head-size: 365 x 305
 case: four
 home: home
+video: XNDUxMTQwODc3Ng==
 title: 全自动样品整经机HRD-858
 keywords: 
 description: 
