--- a/products/_posts/2019-11-08-hrd-818.html
+++ b/products/_posts/2019-11-08-hrd-818.html
@@ -35,6 +35,7 @@ code-number: 不可计
 touch-screen-control: 无
 discharge-chute: 无
 case: four
+video: XNDUxMTM5OTM4MA==
 title: 全自动双锭纬纱机HRD-818
 keywords: 
 description: 
