--- a/products/_posts/2019-11-26-hrd-848.html
+++ b/products/_posts/2019-11-26-hrd-848.html
@@ -34,6 +34,7 @@ kilogram-number: 2.5
 max-code-number: 2000
 pan-head-size: 300 x 295
 case: four
+video: XNDUxMTQwODM0MA==
 title: 全自动样品整经机HRD-848
 keywords: 
 description: 
