--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,7 +31,8 @@ description:
       <p><b>HOI TU ONE MEMBER COMPANY LIMIITED</b></p>
       <p><i class="fas fa-map-marker-alt"></i> 地址：越南平阳省顺安市顺交坊平交坊区192号地区40号</p>
       <p><i class="fas fa-user"></i> 联系人：郭佳伟</p>
-      <p><i class="fas fa-phone"></i> 电话：0084-033-673-7202</p>
+      <p><i class="fas fa-phone"></i> 越南电话：0084-033-673-7202</p>
+      <p><i class="fas fa-phone"></i> 中国电话：+86-13927719550</p>
     </div>
     <div class="col-lg-6 col-md-5 col-sm-4 col-xs-12 margin-btm-20">
       <mip-img src="/images/contact/yuenan-weixin.jpg" alt="越南办公点微信"></mip-img>
