--- a/pages/application.html
+++ b/pages/application.html
@@ -91,4 +91,25 @@ description:
       </div>
     </div>
   </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
+    <div class="shop-item">
+      <div class="shop-thumbnail">
+        <mip-img src="{{ site.url }}/images/application/application-13.jpg" alt="{{ page.title }}"></mip-img>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
+    <div class="shop-item">
+      <div class="shop-thumbnail">
+        <mip-img src="{{ site.url }}/images/application/application-14.jpg" alt="{{ page.title }}"></mip-img>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
+    <div class="shop-item">
+      <div class="shop-thumbnail">
+        <mip-img src="{{ site.url }}/images/application/application-15.jpg" alt="{{ page.title }}"></mip-img>
+      </div>
+    </div>
+  </div>
 </div>
