--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,21 +35,21 @@ description:
       <p><i class="fas fa-phone"></i> 中国电话：+86-13927719550</p>
     </div>
     <div class="col-lg-6 col-md-5 col-sm-4 col-xs-12 margin-btm-20">
-      <mip-img src="/images/contact/yuenan-weixin.jpg" alt="越南办公点微信"></mip-img>
+      <mip-img src="{{ site.url }}/images/contact/yuenan-weixin.jpg" alt="越南办公点微信"></mip-img>
     </div>
   </div>
   <div class="row margin-btm-10">
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-btm-20">
-      <mip-img src="/images/contact/yuenan-1.jpg" alt="越南办公点"></mip-img>
+      <mip-img src="{{ site.url }}/images/contact/yuenan-1.jpg" alt="越南办公点"></mip-img>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-btm-20">
-      <mip-img src="/images/contact/yuenan-2.jpg" alt="越南办公点"></mip-img>
+      <mip-img src="{{ site.url }}/images/contact/yuenan-2.jpg" alt="越南办公点"></mip-img>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-btm-20">
-      <mip-img src="/images/contact/yuenan-3.jpg" alt="越南办公点"></mip-img>
+      <mip-img src="{{ site.url }}/images/contact/yuenan-3.jpg" alt="越南办公点"></mip-img>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-btm-20">
-      <mip-img src="/images/contact/yuenan-4.jpg" alt="越南办公点"></mip-img>
+      <mip-img src="{{ site.url }}/images/contact/yuenan-4.jpg" alt="越南办公点"></mip-img>
     </div>
   </div>
 </div>
