--- a/products/_posts/2019-11-10-hrd-829.html
+++ b/products/_posts/2019-11-10-hrd-829.html
@@ -2,7 +2,7 @@
 layout: products-article
 permalink: /products/hrd-829.html
 category: products
-proname: 多功能全自动纬纱机
+proname: 多功能全自动双层计码纬纱机
 model: HRD-829
 voltage: 220/380
 power: 0.75
