--- a/products/_posts/2019-11-02-hrd-821.html
+++ b/products/_posts/2019-11-02-hrd-821.html
@@ -2,6 +2,7 @@
 layout: products-article
 permalink: /products/hrd-821.html
 category: products
+type: 编织机和绳带机专用
 proname: 半自动清纱机
 model: HRD-821
 voltage: 220
