--- a/products/_posts/2019-11-06-hrd-820.html
+++ b/products/_posts/2019-11-06-hrd-820.html
@@ -2,6 +2,7 @@
 layout: products-article
 permalink: /products/hrd-820.html
 category: products
+type: 编织机和绳带机专用
 proname: 全自动切管机
 model: HRD-820
 voltage: 220
