--- a/products/_posts/2019-11-08-hrd-818.html
+++ b/products/_posts/2019-11-08-hrd-818.html
@@ -2,6 +2,7 @@
 layout: products-article
 permalink: /products/hrd-818.html
 category: products
+type: 编织机和绳带机专用
 proname: 全自动双锭纬纱机
 model: HRD-818
 voltage: 220/380
