--- a/products/_posts/2019-11-12-hrd-819.html
+++ b/products/_posts/2019-11-12-hrd-819.html
@@ -2,6 +2,7 @@
 layout: products-article
 permalink: /products/hrd-819.html
 category: products
+type: 编织机和绳带机专用
 proname: 多功能全自动纬纱机
 model: HRD-819
 voltage: 220/380
