--- a/products/_posts/2019-11-16-hrd-826.html
+++ b/products/_posts/2019-11-16-hrd-826.html
@@ -2,6 +2,7 @@
 layout: products-article
 permalink: /products/hrd-826.html
 category: products
+type: 编织机和绳带机专用
 proname: 双锭单控纬纱机
 model: HRD-826
 voltage: 220/380
