--- a/products/_posts/2019-11-18-hrd-828.html
+++ b/products/_posts/2019-11-18-hrd-828.html
@@ -2,6 +2,7 @@
 layout: products-article
 permalink: /products/hrd-828.html
 category: products
+type: 编织机和绳带机专用
 proname: 全自动双锭计码纬纱机
 model: HRD-828
 voltage: 220/380
