--- a/products/_posts/2019-11-20-hrd-839.html
+++ b/products/_posts/2019-11-20-hrd-839.html
@@ -2,6 +2,7 @@
 layout: products-article
 permalink: /products/hrd-839.html
 category: products
+type: 织带机和无梭机专用
 proname: 全自动高速分纱机
 model: HRD-839
 voltage: 220/380
