--- a/products/_posts/2019-11-22-hrd-838.html
+++ b/products/_posts/2019-11-22-hrd-838.html
@@ -2,6 +2,7 @@
 layout: products-article
 permalink: /products/hrd-838.html
 category: products
+type: 织带机和无梭机专用
 proname: 全自动样品整经机
 model: HRD-838
 voltage: 220/380
