--- a/products/_posts/2019-11-10-hrd-829.html
+++ b/products/_posts/2019-11-10-hrd-829.html
@@ -2,6 +2,7 @@
 layout: products-article
 permalink: /products/hrd-829.html
 category: products
+type: 编织机和绳带机专用
 proname: 多功能全自动双层计码纬纱机
 model: HRD-829
 voltage: 220/380
