--- a/pages/about.html
+++ b/pages/about.html
@@ -42,4 +42,13 @@ description:
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-20">
     <mip-img src="{{ site.url }}/images/about/about-10.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
   </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-20">
+    <mip-img src="{{ site.url }}/images/about/about-11.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-20">
+    <mip-img src="{{ site.url }}/images/about/about-12.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  </div>
+  <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-20">
+    <mip-img src="{{ site.url }}/images/about/about-13.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  </div>
 </div>
