--- a/products/_posts/2019-11-30-hrd-868.html
+++ b/products/_posts/2019-11-30-hrd-868.html
@@ -28,7 +28,7 @@ features-5: 加热定型装置，边出带边定型；
 features-6: 每锭日产量2.8～3公斤左右，一台机10锭日产量28～30公斤，是普通机2倍以上的产量，品质稳定！
 features-7: wu
 features-8: wu
-application: 织带机，无梭机，各类织带厂、拉链厂中小订单和打样板专用
+application: 用于生产N95口罩耳带绳
 table: wu
 yarn-count: wu
 kilogram-number: wu
