--- a/products/_posts/2019-11-30-hrd-868.html
+++ b/products/_posts/2019-11-30-hrd-868.html
@@ -41,20 +41,20 @@ keywords:
 description: 
 ---
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
-  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <img src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail center-block" alt="{{ page.title }}">
 </div>
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
-  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <img src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail center-block" alt="{{ page.title }}">
 </div>
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
-  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-3.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <img src="{{ site.url }}/images/products/{{ page.image }}-3.jpg" class="img-thumbnail center-block" alt="{{ page.title }}">
 </div>
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 margin-btm-20">
-  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-4.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <img src="{{ site.url }}/images/products/{{ page.image }}-4.jpg" class="img-thumbnail center-block" alt="{{ page.title }}">
 </div>
 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 margin-btm-20">
-  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-5.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <img src="{{ site.url }}/images/products/{{ page.image }}-5.jpg" class="img-thumbnail center-block" alt="{{ page.title }}">
 </div>
 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 margin-btm-20">
-  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-6.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <img src="{{ site.url }}/images/products/{{ page.image }}-6.jpg" class="img-thumbnail center-block" alt="{{ page.title }}">
 </div>
