--- a/products/_posts/2019-11-26-hrd-848.html
+++ b/products/_posts/2019-11-26-hrd-848.html
@@ -41,8 +41,8 @@ keywords:
 description: 
 ---
 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 margin-btm-20">
-  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <img src="{{ site.url }}/images/products/{{ page.image }}-1.jpg" class="img-thumbnail center-block" alt="{{ page.title }}">
 </div>
 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 margin-btm-20">
-  <mip-img popup src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail" alt="{{ page.title }}"></mip-img>
+  <img src="{{ site.url }}/images/products/{{ page.image }}-2.jpg" class="img-thumbnail center-block" alt="{{ page.title }}">
 </div>
